--- a/src/components/message/message.css
+++ b/src/components/message/message.css
@@ -1,7 +1,13 @@
 .message {
 	display: flex;
 	flex-direction: column;
+	background: #fff;
+	border-radius: 15px;
+	margin: 7px 0;
+	padding: 8px;
+	box-shadow: 0 0 3px;
 }
+
 
 .text {
 	font-size: 16px;
