--- a/src/components/room/room.css
+++ b/src/components/room/room.css
@@ -3,14 +3,20 @@
 	font-size: 20px;
 	font-weight: bold;
 	color: #fff;
+	display: block;
+	border: none;
+	outline: none;
+	background: none;
+	width: 100%;
+	text-align: left;
 }
 
 .room:hover {
-	box-shadow: -2px 2px 0 #fff;
+	box-shadow: inset 0 0 10px 0 #fff;
 	cursor: pointer;
 	transition: 0.3s ease-in-out;
 }
 
 .active {
-	box-shadow: inset 0 0 10px 0 #fff;;
+	box-shadow: inset 0 0 10px 0 #fff;
 }
